
  * Added option which lets default ROM path follow launcher navigation

  * Added displaying last write address in the debugger.

  * Added detection of color and audio data in DiStella.

  * Restored 'cfg' directory for Distella config files.

  * Added 3EX bank switching type.

  * Removed unused CV+ and DASH bank switching types.

-Have fun!


6.1.1 to 6.1.2: (April 25, 2020)

  * Fixed bug with remapped events not being reloaded in certain cases.

  * Fixed bug in debugger for 3E scheme when displaying active RAM bank.

  * Fixed bug in "Dragon Defender" ROM being misconfigured for Mindlink
    controller.


6.1 to 6.1.1: (April 4, 2020)

  * Fixed crash in 3E bankswitching scheme when writing to ROM addresses.

  * Fix snapshots on Retina HiDPI displays capturing only the top-left
    corner.

  * Fixed wrong color for BK (background) swatch in the debugger.

  * Fixed 'Right Diff' button in Command menu changing left difficulty
    instead.

  * Fixed compilation of libretro port on Debian Buster.


6.0.2 to 6.1: (March 22, 2020)

  * IMPORTANT NOTES:
    - Because of major event remapping changes, all remappings will be reset
      to defaults; if you had custom mappings, they will need to be
      re-entered again.

    - Because of major internal changes, all state files are now invalid.

    - Support for Windows XP has been discontinued as of this version.  WinXP
      is now completely out of support from Microsoft, so we are doing the
      same.

  * Major improvements to display mode handling in NTSC vs. PAL.  The window
    is now the same size for both modes, and scaling is applied to simulate
    the height of scanlines (in PAL mode, there are more scanlines and hence
    each is narrower).  This more properly emulates how the display would look
    on a real TV.

  * Removed the 'Display_Height' property, changing it to 'Display_VCenter'.
    This new feature, along with the display mode changes above, almost