@@ -875,7 +875,7 @@ std::array<Debugger::BuiltinFunction, 18> Debugger::ourBuiltinFunctions = { {
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 // Names are defined here, but processed in YaccParser
-std::array<Debugger::PseudoRegister, 11> Debugger::ourPseudoRegisters = { {
+std::array<Debugger::PseudoRegister, 12> Debugger::ourPseudoRegisters = { {
 // Debugger::PseudoRegister Debugger::ourPseudoRegisters[NUM_PSEUDO_REGS] = {
   { "_bank",      "Currently selected bank" },
   { "_cclocks",   "Color clocks on current scanline" },
@@ -883,8 +883,9 @@ std::array<Debugger::PseudoRegister, 11> Debugger::ourPseudoRegisters = { {
   { "_cycleslo",  "Lower 32 bits of number of cycles since emulation started" },
   { "_fcount",    "Number of frames since emulation started" },
   { "_fcycles",   "Number of cycles since frame started" },
-  { "_icycles",    "Number of cycles of last instruction" },
+  { "_icycles",   "Number of cycles of last instruction" },
   { "_scan",      "Current scanline count" },
+  { "_scanend",   "Scanline count at end of last frame" },
   { "_scycles",   "Number of cycles in current scanline" },
   { "_vblank",    "Whether vertical blank is enabled (1 or 0)" },
   { "_vsync",     "Whether vertical sync is enabled (1 or 0)" }
