@@ -40,6 +40,9 @@
 
   * Removed unused CV+ and DASH bank switching types.
 
+  * Added debugger pseudo-register '_scanend', which gives the number of
+    scanlines at the end of the last frame.
+
 -Have fun!
 
 
